[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hf_explorer"
version = "0.1.0"
authors = [
  { name="broadfiled-dev" },
]
description = "A custom Gradio component to explore the local file system and environment."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio>=4.0.0",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/broadfield-dev/HF-Explorer"
Issues = "https://github.com/broadfield-dev/HF-Explorer/issues"

[tool.setuptools.packages.find]
where = ["."]
